--- a/fi-frontend/src/styles/globals.css
+++ b/fi-frontend/src/styles/globals.css
@@ -91,6 +91,11 @@
   .data-table-cell {
     @apply px-6 py-4 whitespace-nowrap text-sm text-gray-300;
   }
+
+  .animate-gradient-slow {
+    background-size: 200% 200%;
+    animation: gradient 15s ease infinite;
+  }
 }
 
 @layer utilities {
@@ -108,6 +113,18 @@
     -webkit-backdrop-filter: blur(8px);
     -moz-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
+  }
+
+  .text-glow {
+    text-shadow: 0 0 10px rgb(191 219 254 / 50%);
+  }
+  
+  .box-glow-purple {
+    box-shadow: 0 0 20px -5px rgba(168, 85, 247, 0.4);
+  }
+  
+  .box-glow-blue {
+    box-shadow: 0 0 20px -5px rgba(59, 130, 246, 0.4);
   }
 }
 
